Change how the roles/emojis/channels look like on smaller screens, to avoid the div going out of bounds

--- a/loritta-bot-discord/src/main/sass-dashboard-v2/components/_discord-message-editor.scss
+++ b/loritta-bot-discord/src/main/sass-dashboard-v2/components/_discord-message-editor.scss
@@ -118,12 +118,21 @@
             z-index: 1;
             box-shadow: var(--shadow-elevation-2);
             border-radius: var(--nice-border-radius);
+            border: 1px solid var(--card-border-color);
             display: flex;
             flex-direction: column;
             padding: 0.5em;
             gap: 0.5em;
             animation: open-popover 0.2s;
             transform-origin: bottom right;
+
+            @media (600px > width) {
+                position: fixed;
+                bottom: env(safe-area-inset-bottom, 0px);
+                left: 0;
+                width: 100vw;
+                animation: open-popover-mobile 0.2s
+            }
 
             .message-config-popover-content {
                 height: 100%;
@@ -207,6 +216,21 @@
     transform: scale(1);
     opacity: 1;
   }
+}
+
+@keyframes open-popover-mobile {
+    0% {
+        transform: translateY(300px);
+        opacity: 0;
+    }
+    90% {
+        transform: translateY(5px);
+        opacity: 1;
+    }
+    100% {
+        transform: translateY(0px);
+        opacity: 1;
+    }
 }
 
 @keyframes open-tooltip {
